Enhance popup settings UI with new toggle options and refactor event handling

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -24,7 +24,37 @@
                     </svg>
                     Visual Enhancements
                 </h2>
-                <div id="settings-visual"></div>
+                <div id="settings-visual">
+                    <div class="setting-item" data-setting="unblurImages">
+                        <div class="setting-info">
+                            <h3 class="setting-title">Unblur Profile Images</h3>
+                        </div>
+                        <label class="toggle-switch">
+                            <input type="checkbox" data-key="unblurImages">
+                            <span class="toggle-slider"></span>
+                        </label>
+                    </div>
+
+                    <div class="setting-item" data-setting="enhanceDiscoverPage">
+                        <div class="setting-info">
+                            <h3 class="setting-title">Enhance Discover Page</h3>
+                        </div>
+                        <label class="toggle-switch">
+                            <input type="checkbox" data-key="enhanceDiscoverPage">
+                            <span class="toggle-slider"></span>
+                        </label>
+                    </div>
+
+                    <div class="setting-item" data-setting="enhanceInterestedPhotos">
+                        <div class="setting-info">
+                            <h3 class="setting-title">Enhance Interested Photos</h3>
+                        </div>
+                        <label class="toggle-switch">
+                            <input type="checkbox" data-key="enhanceInterestedPhotos">
+                            <span class="toggle-slider"></span>
+                        </label>
+                    </div>
+                </div>
             </div>
 
             <div class="settings-section">
@@ -35,7 +65,27 @@
                     </svg>
                     Data & Interface
                 </h2>
-                <div id="settings-data"></div>
+                <div id="settings-data">
+                    <div class="setting-item" data-setting="likesCount">
+                        <div class="setting-info">
+                            <h3 class="setting-title">Show Actual Likes Count</h3>
+                        </div>
+                        <label class="toggle-switch">
+                            <input type="checkbox" data-key="likesCount">
+                            <span class="toggle-slider"></span>
+                        </label>
+                    </div>
+
+                    <div class="setting-item" data-setting="blockPremiumAds">
+                        <div class="setting-info">
+                            <h3 class="setting-title">Block Premium Ads</h3>
+                        </div>
+                        <label class="toggle-switch">
+                            <input type="checkbox" data-key="blockPremiumAds">
+                            <span class="toggle-slider"></span>
+                        </label>
+                    </div>
+                </div>
             </div>
         </div>
 
