Update CHANGELOG.md for version 0.9.1: add horizontal scroll support for Discover page; update manifest and settings

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -54,6 +54,16 @@
                             <span class="toggle-slider"></span>
                         </label>
                     </div>
+
+                    <div class="setting-item" data-setting="horizontalScroll">
+                        <div class="setting-info">
+                            <h3 class="setting-title">Horizontal Scroll Navigation</h3>
+                        </div>
+                        <label class="toggle-switch">
+                            <input type="checkbox" data-key="horizontalScroll">
+                            <span class="toggle-slider"></span>
+                        </label>
+                    </div>
                 </div>
             </div>
 
