chore: update asset locations and enhance branding
- Updated the location of extension assets in the README and manifest files.
- Added new branding assets including SVG and PNG icons.
- Improved layout and navigation features in the popup settings.
- Updated the CHANGELOG to reflect recent changes.

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -11,7 +11,7 @@
 <body>
     <div class="popup-container">
         <div class="header">
-            <img src="../cupid-enhanced.svg" alt="Cupid Enhanced" class="header-logo">
+            <img src="../assets/branding/cupid-enhanced.svg" alt="Cupid Enhanced" class="header-logo">
         </div>
 
         <div class="settings-container">
