feat: enhance likes management and update UI for remaining likes and reset time

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -69,7 +69,7 @@
                 <div id="settings-data">
                     <div class="setting-item" data-setting="enhanceDiscoverPage">
                         <div class="setting-info">
-                            <h3 class="setting-title">Widen Discover Layout</h3>
+                            <h3 class="setting-title">Better Discover Layout</h3>
                         </div>
                         <label class="toggle-switch">
                             <input type="checkbox" data-key="enhanceDiscoverPage">
