feat: add dark mode toggle and styles to enhance user experience

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -96,6 +96,16 @@
                             <span class="toggle-slider"></span>
                         </label>
                     </div>
+
+                    <div class="setting-item" data-setting="darkMode">
+                        <div class="setting-info">
+                            <h3 class="setting-title">Dark Mode</h3>
+                        </div>
+                        <label class="toggle-switch">
+                            <input type="checkbox" data-key="darkMode">
+                            <span class="toggle-slider"></span>
+                        </label>
+                    </div>
                 </div>
             </div>
         </div>
