feat: display version from manifest in the popup footer

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -112,7 +112,7 @@
 
         <div class="footer">
             <span class="instructions">Refresh the site to apply changes</span>
-            <span class="version">v0.9.0</span>
+            <span class="version" id="version"></span>
         </div>
     </div>
     <script src="popup.js"></script>
