feat: update dark mode setting title to indicate experimental status and correct .gitignore entry for source files

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -89,7 +89,7 @@
 
                     <div class="setting-item" data-setting="darkMode">
                         <div class="setting-info">
-                            <h3 class="setting-title">Dark Mode</h3>
+                            <h3 class="setting-title">Dark Mode (Experimental)</h3>
                         </div>
                         <label class="toggle-switch">
                             <input type="checkbox" data-key="darkMode">
