--- a/popup/popup.html
+++ b/popup/popup.html
@@ -67,6 +67,16 @@
                         </label>
                     </div>
 
+                    <div class="setting-item" data-setting="enhanceLikesYouPage">
+                        <div class="setting-info">
+                            <h3 class="setting-title">Better Likes You Layout</h3>
+                        </div>
+                        <label class="toggle-switch">
+                            <input type="checkbox" data-key="enhanceLikesYouPage">
+                            <span class="toggle-slider"></span>
+                        </label>
+                    </div>
+
                     <div class="setting-item" data-setting="horizontalScroll">
                         <div class="setting-info">
                             <h3 class="setting-title">Horizontal Mouse Scroll to Browse</h3>
