--- a/popup/popup.html
+++ b/popup/popup.html
@@ -45,6 +45,16 @@
                         </label>
                     </div>
 
+                    <div class="setting-item" data-setting="staffMode">
+                        <div class="setting-info">
+                            <h3 class="setting-title">Staff Mode</h3>
+                        </div>
+                        <label class="toggle-switch">
+                            <input type="checkbox" data-key="staffMode">
+                            <span class="toggle-slider"></span>
+                        </label>
+                    </div>
+
                 </div>
             </div>
 
