fix: add description for staff mode setting in popup

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -47,7 +47,10 @@
 
                     <div class="setting-item" data-setting="staffMode">
                         <div class="setting-info">
-                            <h3 class="setting-title">Staff Mode</h3>
+                            <div class="setting-text">
+                                <h3 class="setting-title">Staff Mode</h3>
+                                <span class="setting-description">Shows staff panel on the left sidebar</span>
+                            </div>
                         </div>
                         <label class="toggle-switch">
                             <input type="checkbox" data-key="staffMode">
